修复一大堆登录问题